--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel": "^6.23.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
