--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.12",
-    "sinon": "^9.0.2",
-    "sinon-chai": "^3.5.0"
+    "mongoose": "^5.9.12"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -16,8 +14,9 @@
     "mocha": "^7.1.2"
   },
   "scripts": {
+    "start":"node index.js",
     "test": "mocha --timeout 10000",
-    "exercise": "index.js"
+    "exercise": "test.js"
   },
   "repository": {
     "type": "git",
